package product;

/**
 * @author yuanweimin
 * @date 19/05/13 09:21
 * @description 鼠标产品
 */
public class Mouse implements Product {
    @Override
    public void use() {
        System.out.println("use mouse ...");
    }
}
