package product;

/**
 * @author yuanweimin
 * @date 19/05/13 09:21
 * @description 产品接口
 */
public interface Product {
    /**
     * 产品的使用
     */
    void use();
}
