@startuml
interface Factory <<Interface>> {
    # createProd(): Product
}
class ComputerFactory implements Factory {
    + createProd(): Computer
}
class MouseFactory implements Factory {
    + createProd(): Mouse
}
interface Product <<Interface>> {
    # use(): void
}
class Computer implements Product {
    + use(): void
}
class Mouse implements Product {
    + use(): void
}

Computer <.. ComputerFactory
Mouse <.. MouseFactory

@enduml